# ledgermem-autogen

./: README.md  pyproject.toml
src/ledgermem_autogen/: __init__.py  memory.py
tests/: test_smoke.py
