[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ledgermem-autogen"
version = "0.1.0"
description = "AutoGen 0.4+ Memory protocol implementation backed by LedgerMem."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "LedgerMem", email = "founders@proofly.dev" }]
keywords = ["ledgermem", "autogen", "memory", "agents", "llm"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "ledgermem>=0.1",
  "autogen-core>=0.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "pytest-asyncio>=0.23",
  "ruff>=0.5",
  "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/ledgermem/ledgermem-autogen"
Issues = "https://github.com/ledgermem/ledgermem-autogen/issues"
Source = "https://github.com/ledgermem/ledgermem-autogen"

[tool.hatch.build.targets.wheel]
packages = ["src/ledgermem_autogen"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
